Fix MyModels grid gap and body size to match purple holder slots

--- a/src/Components/MainMenuStack/StartStack/MainGameStack/MyModels/MyModels.module.css
+++ b/src/Components/MainMenuStack/StartStack/MainGameStack/MyModels/MyModels.module.css
@@ -1,4 +1,5 @@
 .myModelsDiv {
+    position: relative;
     height: 100%;
     width: 100%;
     display: flex;
