--- a/src/Components/MainMenuStack/StartStack/MainGameStack/MyModels/MyModelsBody/MyModelsBody.module.css
+++ b/src/Components/MainMenuStack/StartStack/MainGameStack/MyModels/MyModelsBody/MyModelsBody.module.css
@@ -1,11 +1,10 @@
-/* Layout pattern matches SnapShotBody / WorldBody: fixed grid root + absolute overlays */
 .modelsBody {
-    height: 530px;
+    position: relative;
+    height: 441px;
     width: 229px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
 }
 
 .upArrowHolder {
@@ -29,11 +28,10 @@
     display: grid;
     grid-template-columns: repeat(2, 95px);
     grid-template-rows: repeat(3, 67px);
-    gap: 40px;
-    width: 100%;
-    height: 80%;
-    margin-top: 14%;
-    margin-left: 8%;
+    gap: 18px 12px;
+    width: 202px;
+    margin-top: 3%;
+    margin-left: 13%;
 }
 
 .item {
@@ -64,9 +62,8 @@
 
 .downArrowHolder {
     position: absolute;
-    bottom: 21%;
-    left: 50%;
-    transform: translateX(-50%);
+    bottom: 23.5%;
+    right: 46%;
     width: 42px;
     height: 26px;
     z-index: 9;
@@ -81,22 +78,21 @@
 }
 
 .lowerContent {
-    width: 80%;
+    width: 75%;
     height: 13%;
     position: absolute;
     bottom: 9%;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0.5%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 24px;
+    gap: 37px;
 }
 
 .iconComponentHolder {
-    height: 66px;
-    width: 66px;
+    height: 72px;
+    width: 71px;
     justify-content: center;
     align-items: center;
     display: flex;
