--- a/src/Components/MainMenuStack/StartStack/MainGameStack/MyModels/MyModelsHolder/MyModelsHolder.module.css
+++ b/src/Components/MainMenuStack/StartStack/MainGameStack/MyModels/MyModelsHolder/MyModelsHolder.module.css
@@ -1,4 +1,3 @@
-/* Frame holder — same role as SnapShotHolder.componentHolder */
 .componentHolder {
     display: flex;
     flex-direction: column;
@@ -9,7 +8,6 @@
     left: 29.15%;
     top: 6%;
     z-index: 2;
-    overflow: visible;
     background-image: url('../MyModelsResourceStack/drop_down.png');
     background-size: contain;
     background-repeat: no-repeat;
